Piggy/SpecParserParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SpecParser.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class SpecParserParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_LINE_DOC_COMMENT=1, DELIMITED_DOC_COMMENT=2, SINGLE_LINE_COMMENT=3, 
		DELIMITED_COMMENT=4, CALLING_CONVENTION=5, ADD_AFTER_USINGS=6, CLASS_NAME=7, 
		CODE=8, COMPILER_OPTION=9, DLLIMPORT=10, EXCLUDE=11, IMPORT_FILE=12, NAMESPACE=13, 
		PASS=14, PREFIX_STRIP=15, TEMPLATE=16, REWRITE=17, EQ=18, SEMI=19, OR=20, 
		STAR=21, PLUS=22, DOT=23, DOLLAR=24, OPEN_RE=25, CLOSE_RE=26, OPEN_PAREN=27, 
		CLOSE_PAREN=28, OPEN_KLEENE_STAR_PAREN=29, CLOSE_KLEENE_STAR_PAREN=30, 
		OPEN_BRACKET_NOT=31, OPEN_BRACKET=32, CLOSE_BRACKET=33, MINUS=34, LCURLY=35, 
		LANG=36, StringLiteral=37, ID=38, WS=39, RCURLY=40, OTHER=41, RANG=42, 
		OTHER_ANG=43;
	public const int
		RULE_spec = 0, RULE_items = 1, RULE_namespace = 2, RULE_exclude = 3, RULE_import_file = 4, 
		RULE_dllimport = 5, RULE_add_after_usings = 6, RULE_code = 7, RULE_prefix_strip = 8, 
		RULE_class_name = 9, RULE_calling_convention = 10, RULE_compiler_option = 11, 
		RULE_template = 12, RULE_rexp = 13, RULE_simple_rexp = 14, RULE_basic_rexp = 15, 
		RULE_star_rexp = 16, RULE_plus_rexp = 17, RULE_elementary_rexp = 18, RULE_group_rexp = 19, 
		RULE_basic = 20, RULE_simple_basic = 21, RULE_kleene_star_basic = 22, 
		RULE_id_or_star_or_empty = 23, RULE_more = 24, RULE_text = 25, RULE_attr = 26, 
		RULE_pass = 27;
	public static readonly string[] ruleNames = {
		"spec", "items", "namespace", "exclude", "import_file", "dllimport", "add_after_usings", 
		"code", "prefix_strip", "class_name", "calling_convention", "compiler_option", 
		"template", "rexp", "simple_rexp", "basic_rexp", "star_rexp", "plus_rexp", 
		"elementary_rexp", "group_rexp", "basic", "simple_basic", "kleene_star_basic", 
		"id_or_star_or_empty", "more", "text", "attr", "pass"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'calling_convention'", "'add_after_usings'", 
		"'class_name'", "'code'", "'compiler_option'", "'dllimport'", "'exclude'", 
		"'import_file'", "'namespace'", "'pass'", "'prefix_strip'", "'template'", 
		"'=>'", "'='", "';'", "'|'", "'*'", "'+'", "'.'", "'$'", "'(%'", "'%)'", 
		"'('", "')'", "'(*'", "'*)'", "'[^'", "'['", "']'", "'-'", "'{'", "'<'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_LINE_DOC_COMMENT", "DELIMITED_DOC_COMMENT", "SINGLE_LINE_COMMENT", 
		"DELIMITED_COMMENT", "CALLING_CONVENTION", "ADD_AFTER_USINGS", "CLASS_NAME", 
		"CODE", "COMPILER_OPTION", "DLLIMPORT", "EXCLUDE", "IMPORT_FILE", "NAMESPACE", 
		"PASS", "PREFIX_STRIP", "TEMPLATE", "REWRITE", "EQ", "SEMI", "OR", "STAR", 
		"PLUS", "DOT", "DOLLAR", "OPEN_RE", "CLOSE_RE", "OPEN_PAREN", "CLOSE_PAREN", 
		"OPEN_KLEENE_STAR_PAREN", "CLOSE_KLEENE_STAR_PAREN", "OPEN_BRACKET_NOT", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "MINUS", "LCURLY", "LANG", "StringLiteral", 
		"ID", "WS", "RCURLY", "OTHER", "RANG", "OTHER_ANG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SpecParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SpecParserParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SpecParserParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SpecParserParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SpecContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(SpecParserParser.Eof, 0); }
		public ItemsContext[] items() {
			return GetRuleContexts<ItemsContext>();
		}
		public ItemsContext items(int i) {
			return GetRuleContext<ItemsContext>(i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_spec; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitSpec(this);
		}
	}

	[RuleVersion(0)]
	public SpecContext spec() {
		SpecContext _localctx = new SpecContext(Context, State);
		EnterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CALLING_CONVENTION) | (1L << ADD_AFTER_USINGS) | (1L << CLASS_NAME) | (1L << COMPILER_OPTION) | (1L << DLLIMPORT) | (1L << EXCLUDE) | (1L << IMPORT_FILE) | (1L << NAMESPACE) | (1L << PASS) | (1L << PREFIX_STRIP) | (1L << TEMPLATE))) != 0)) {
				{
				{
				State = 56; items();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 62; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemsContext : ParserRuleContext {
		public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		public ExcludeContext exclude() {
			return GetRuleContext<ExcludeContext>(0);
		}
		public Import_fileContext import_file() {
			return GetRuleContext<Import_fileContext>(0);
		}
		public DllimportContext dllimport() {
			return GetRuleContext<DllimportContext>(0);
		}
		public Add_after_usingsContext add_after_usings() {
			return GetRuleContext<Add_after_usingsContext>(0);
		}
		public Prefix_stripContext prefix_strip() {
			return GetRuleContext<Prefix_stripContext>(0);
		}
		public Class_nameContext class_name() {
			return GetRuleContext<Class_nameContext>(0);
		}
		public Calling_conventionContext calling_convention() {
			return GetRuleContext<Calling_conventionContext>(0);
		}
		public Compiler_optionContext compiler_option() {
			return GetRuleContext<Compiler_optionContext>(0);
		}
		public TemplateContext template() {
			return GetRuleContext<TemplateContext>(0);
		}
		public PassContext pass() {
			return GetRuleContext<PassContext>(0);
		}
		public ItemsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_items; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterItems(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitItems(this);
		}
	}

	[RuleVersion(0)]
	public ItemsContext items() {
		ItemsContext _localctx = new ItemsContext(Context, State);
		EnterRule(_localctx, 2, RULE_items);
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NAMESPACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; @namespace();
				}
				break;
			case EXCLUDE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; exclude();
				}
				break;
			case IMPORT_FILE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66; import_file();
				}
				break;
			case DLLIMPORT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 67; dllimport();
				}
				break;
			case ADD_AFTER_USINGS:
				EnterOuterAlt(_localctx, 5);
				{
				State = 68; add_after_usings();
				}
				break;
			case PREFIX_STRIP:
				EnterOuterAlt(_localctx, 6);
				{
				State = 69; prefix_strip();
				}
				break;
			case CLASS_NAME:
				EnterOuterAlt(_localctx, 7);
				{
				State = 70; class_name();
				}
				break;
			case CALLING_CONVENTION:
				EnterOuterAlt(_localctx, 8);
				{
				State = 71; calling_convention();
				}
				break;
			case COMPILER_OPTION:
				EnterOuterAlt(_localctx, 9);
				{
				State = 72; compiler_option();
				}
				break;
			case TEMPLATE:
				EnterOuterAlt(_localctx, 10);
				{
				State = 73; template();
				}
				break;
			case PASS:
				EnterOuterAlt(_localctx, 11);
				{
				State = 74; pass();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceContext : ParserRuleContext {
		public ITerminalNode NAMESPACE() { return GetToken(SpecParserParser.NAMESPACE, 0); }
		public ITerminalNode ID() { return GetToken(SpecParserParser.ID, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitNamespace(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespace);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; Match(NAMESPACE);
			State = 78; Match(ID);
			State = 79; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExcludeContext : ParserRuleContext {
		public ITerminalNode EXCLUDE() { return GetToken(SpecParserParser.EXCLUDE, 0); }
		public ITerminalNode ID() { return GetToken(SpecParserParser.ID, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public ExcludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exclude; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterExclude(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitExclude(this);
		}
	}

	[RuleVersion(0)]
	public ExcludeContext exclude() {
		ExcludeContext _localctx = new ExcludeContext(Context, State);
		EnterRule(_localctx, 6, RULE_exclude);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(EXCLUDE);
			State = 82; Match(ID);
			State = 83; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Import_fileContext : ParserRuleContext {
		public ITerminalNode IMPORT_FILE() { return GetToken(SpecParserParser.IMPORT_FILE, 0); }
		public ITerminalNode StringLiteral() { return GetToken(SpecParserParser.StringLiteral, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Import_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_import_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterImport_file(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitImport_file(this);
		}
	}

	[RuleVersion(0)]
	public Import_fileContext import_file() {
		Import_fileContext _localctx = new Import_fileContext(Context, State);
		EnterRule(_localctx, 8, RULE_import_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(IMPORT_FILE);
			State = 86; Match(StringLiteral);
			State = 87; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DllimportContext : ParserRuleContext {
		public ITerminalNode DLLIMPORT() { return GetToken(SpecParserParser.DLLIMPORT, 0); }
		public ITerminalNode StringLiteral() { return GetToken(SpecParserParser.StringLiteral, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public DllimportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dllimport; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterDllimport(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitDllimport(this);
		}
	}

	[RuleVersion(0)]
	public DllimportContext dllimport() {
		DllimportContext _localctx = new DllimportContext(Context, State);
		EnterRule(_localctx, 10, RULE_dllimport);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(DLLIMPORT);
			State = 90; Match(StringLiteral);
			State = 91; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Add_after_usingsContext : ParserRuleContext {
		public ITerminalNode ADD_AFTER_USINGS() { return GetToken(SpecParserParser.ADD_AFTER_USINGS, 0); }
		public CodeContext code() {
			return GetRuleContext<CodeContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Add_after_usingsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add_after_usings; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterAdd_after_usings(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitAdd_after_usings(this);
		}
	}

	[RuleVersion(0)]
	public Add_after_usingsContext add_after_usings() {
		Add_after_usingsContext _localctx = new Add_after_usingsContext(Context, State);
		EnterRule(_localctx, 12, RULE_add_after_usings);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(ADD_AFTER_USINGS);
			State = 94; code();
			State = 95; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeContext : ParserRuleContext {
		public ITerminalNode LCURLY() { return GetToken(SpecParserParser.LCURLY, 0); }
		public ITerminalNode RCURLY() { return GetToken(SpecParserParser.RCURLY, 0); }
		public ITerminalNode[] OTHER() { return GetTokens(SpecParserParser.OTHER); }
		public ITerminalNode OTHER(int i) {
			return GetToken(SpecParserParser.OTHER, i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 14, RULE_code);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(LCURLY);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OTHER) {
				{
				{
				State = 98; Match(OTHER);
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 104; Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prefix_stripContext : ParserRuleContext {
		public ITerminalNode PREFIX_STRIP() { return GetToken(SpecParserParser.PREFIX_STRIP, 0); }
		public ITerminalNode ID() { return GetToken(SpecParserParser.ID, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Prefix_stripContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prefix_strip; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterPrefix_strip(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitPrefix_strip(this);
		}
	}

	[RuleVersion(0)]
	public Prefix_stripContext prefix_strip() {
		Prefix_stripContext _localctx = new Prefix_stripContext(Context, State);
		EnterRule(_localctx, 16, RULE_prefix_strip);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(PREFIX_STRIP);
			State = 107; Match(ID);
			State = 108; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_nameContext : ParserRuleContext {
		public ITerminalNode CLASS_NAME() { return GetToken(SpecParserParser.CLASS_NAME, 0); }
		public ITerminalNode ID() { return GetToken(SpecParserParser.ID, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Class_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterClass_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitClass_name(this);
		}
	}

	[RuleVersion(0)]
	public Class_nameContext class_name() {
		Class_nameContext _localctx = new Class_nameContext(Context, State);
		EnterRule(_localctx, 18, RULE_class_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(CLASS_NAME);
			State = 111; Match(ID);
			State = 112; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Calling_conventionContext : ParserRuleContext {
		public ITerminalNode CALLING_CONVENTION() { return GetToken(SpecParserParser.CALLING_CONVENTION, 0); }
		public ITerminalNode ID() { return GetToken(SpecParserParser.ID, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Calling_conventionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calling_convention; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterCalling_convention(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitCalling_convention(this);
		}
	}

	[RuleVersion(0)]
	public Calling_conventionContext calling_convention() {
		Calling_conventionContext _localctx = new Calling_conventionContext(Context, State);
		EnterRule(_localctx, 20, RULE_calling_convention);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(CALLING_CONVENTION);
			State = 115; Match(ID);
			State = 116; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Compiler_optionContext : ParserRuleContext {
		public ITerminalNode COMPILER_OPTION() { return GetToken(SpecParserParser.COMPILER_OPTION, 0); }
		public ITerminalNode StringLiteral() { return GetToken(SpecParserParser.StringLiteral, 0); }
		public ITerminalNode SEMI() { return GetToken(SpecParserParser.SEMI, 0); }
		public Compiler_optionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compiler_option; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.EnterCompiler_option(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpecParserListener typedListener = listener as ISpecParserListener;
			if (typedListener != null) typedListener.ExitCompiler_option(this);
		}
	}
